--- a/index.html
+++ b/index.html
@@ -48,37 +48,17 @@
     </header>
     <main>
 
-        <div id="todos">
+        <div id="cards">
             <div class="pokemon-todos" id="listaPokemon">
-                <div class="pokemon">
-                    <p class="pokemon-id-back">#025</p>
-                    <div class="pokemon-imagen">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png"
-                            alt="Pikachu">
-                    </div>
-                    <div class="pokemon-info">
-                        <div class="nombre-contenedor">
-                            <p class="pokemon-id">#025</p>
-                            <h2 class="pokemon-nombre">Pikachu</h2>
-                        </div>
-                        <div class="pokemon-tipos">
-                            <p class="electric tipo">ELECTRIC</p>
-                            <p class="fighting tipo">FIGHTING</p>
-                        </div>
-                        <div class="pokemon-stats">
-                            <p class="stat">4m</p>
-                            <p class="stat">60kg</p>
-                        </div>
-                    </div>
-                </div>
             </div>
+
         </div>
         <div>
             <button id="prueba">Pikachu</button>
         </div>
     </main>
 
-    <script src="./main.js"></script>
+    <script src="./index.js" type="module" defer></script>
 </body>
 
 </html>
