style: :lipstick: Insignificant but necessary changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         </div>
         <div>
-            <button id="prueba">Pikachu</button>
+            <!-- <button class="prueba">pikachu</button> -->
         </div>
     </main>
 
