--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark/dark.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
     </header>
     <main>
 
-        <div id="cards">
+        <div class="cards">
             <div class="pokemon-todos" id="listaPokemon">
             </div>
 
